# WeChatGPT

./: .gitignore  AGENTS.md  README.md  config_template.yaml  pyproject.toml
docs/: README.md
scripts/: run_assistant.py
tests/: test_config.py  test_image_generator.py  test_run_assistant.py  test_siliconflow_client.py  test_voice.py  test_wechat_client.py
wechat_gpt/: __init__.py  config.py
wechat_gpt/image/: generator.py
wechat_gpt/llm/: siliconflow_client.py
wechat_gpt/util/: logger.py
wechat_gpt/voice/: __init__.py  speech_to_text.py  text_to_speech.py
wechat_gpt/wechat/: __init__.py  client.py
