[tool.poetry]
name = "wechatgpt"
version = "0.1.0"
description = "Multi-modal WeChat assistant using SiliconFlow APIs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
